| Bug #44866 | dynamic ports no longer available in configuration | ||
|---|---|---|---|
| Submitted: | 14 May 2009 9:17 | Modified: | 15 May 2009 15:00 |
| Reporter: | Magnus Blåudd | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | OS: | Any | |
| Assigned to: | Magnus Blåudd | CPU Architecture: | Any |
[14 May 2009 9:17]
Magnus Blåudd
[14 May 2009 9:19]
Magnus Blåudd
Dynamic ports are the default way of allocating connections between nodes in the cluster. Only in rare cases do you need to specify individual connections between nodes.
[14 May 2009 19:46]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/74103
[14 May 2009 20:08]
Bugs System
Pushed into 5.1.34-ndb-7.0.6 (revid:magnus.blaudd@sun.com-20090514194749-5zeuy3cy5sy9ccrl) (version source revid:magnus.blaudd@sun.com-20090514194749-5zeuy3cy5sy9ccrl) (merge vers: 5.1.34-ndb-7.0.6) (pib:6)
[15 May 2009 15:00]
Jon Stephens
Documented bugfix in the NDB-7.0.6 changelog as follows:
When restarting, data nodes failed to re-use existing ports that
had already been dynamically allocated for communications with
management or API nodes.
