Bug#44866 dynamic ports no longer available in configuration  - Moved the responsibilty of keeping the list of dynamic ports to    ConfigManager, that way it can write the ports it now about to the    config when a client asks for it. To avoid having to do that too many times    the resulting "packed config" is now cached until the config is changed or    a new dynamic port is set.  - This also avoid the need to copy dynamic ports when config change, which means    that BUG#44488 should be completely fixed now.